--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,9 @@
-
+<div class="container">
+<ul class="slider">
+  <li class="slider-item active one"></li>
+  <li class="slider-item two"></li>
+  <li class="slider-item three"></li>
+</ul>
+<button type="button" class="left">left</button>
+<button type="button" class="right">right</button>
+</div>
