--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -24,3 +24,9 @@
   top: 0;
   left: 0;
 }
+
+// .no-active {
+//   position: absolute;
+//   transform: translateX(-100%);
+//   z-index: -1;
+// }
